--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,13 +18,13 @@ jobs:
       run: npm install
     - name: Build on Ubuntu
       if: matrix.os == 'ubuntu-latest'
-      run: npm run build-linux
+      run: npm run build:linux
     - name: Build on Windows
       if: matrix.os == 'windows-latest'
-      run: npm run build-windows
+      run: npm run build:win
     - name: Build on macOS
       if: matrix.os == 'macos-latest'
-      run: npm run build-mac
+      run: npm run build:macos
     - name: Archive Artifacts
       uses: actions/upload-artifact@v2
       with:
