--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mockingbird-proxy",
     "version": "1.0.0",
-    "description": "",
+    "description": "mockingbird-proxy is a simple proxy server that allows you to mock API responses.",
     "main": "./src/main.js",
     "scripts": {
         "start": "electron .",
@@ -26,6 +26,8 @@
         "express": "^4.18.2",
         "express-handlebars": "^7.1.2",
         "express-http-proxy": "^2.0.0",
+        "ffmpeg-static-electron": "^2.0.3",
+        "fluent-ffmpeg": "^2.1.2",
         "http-proxy": "^1.18.1",
         "http-proxy-middleware": "^3.0.0-beta.1",
         "jquery": "^3.7.1",
@@ -50,8 +52,11 @@
         "portable": {
             "artifactName": "${productName}-portable-${version}.${ext}"
         },
-        "directories" :{
+        "directories": {
             "buildResources": "./buildResources"
+        },
+        "win": {
+            "target": "portable"
         }
     }
 }
