--- a/package.json
+++ b/package.json
@@ -66,6 +66,12 @@
         },
         "win": {
             "target": "portable"
+        },
+        "linux": {
+            "target": "AppImage"
+        },
+        "mac": {
+            "target": "dmg"
         }
     }
 }
