--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,10 +20,10 @@ jobs:
       run: npm install
 
     - name: Build for MacOS
-      run: npm run build:mac
+      run: npm run build:macos
 
     - name: Build for Windows
-      run: npm run build:windows
+      run: npm run build:win
 
     - name: Build for Linux
       run: npm run build:linux
