Update GitHub token in build.yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,5 +36,4 @@ jobs:
           ./dist/mockingbird-proxy-portable-*.exe
           ./dist/mockingbird-proxy-*.dmg
           ./dist/mockingbird-proxy-*.AppImage
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GH_TOKEN }}
