Update build.yaml to use 'token' instead of 'GITHUB_TOKEN'

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,5 +36,4 @@ jobs:
           ./dist/mockingbird-proxy-portable-*.exe
           ./dist/mockingbird-proxy-*.dmg
           ./dist/mockingbird-proxy-*.AppImage
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_SECRET }}
+        token: ${{ secrets.RELEASE_SECRET }}
