Add GitHub tag action for generating tags

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,14 @@ on:
 jobs:
   build-and-release:
     runs-on: macos-latest
+
     steps:
     - uses: actions/checkout@v2
+    - name: Generate Tag
+      id: tagger
+      uses: anothrNick/github-tag-action@1.26.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
     - name: Setup Node
       uses: actions/setup-node@v2
@@ -37,6 +43,4 @@ jobs:
           ./dist/mockingbird-proxy-*.dmg
           ./dist/mockingbird-proxy-*.AppImage
         token: ${{ secrets.GH_TOKEN }}
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
