Add dependency on tag job for build-and-release workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   build-and-release:
+    needs: tag
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
