--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,7 @@ jobs:
           ./dist/mockingbird-proxy-*.dmg
           ./dist/mockingbird-proxy-*.AppImage
         token: ${{ secrets.GH_TOKEN }}
-        tag_name: ${{ needs.tag.outputs.new_tag }}
+        tag_name: v${{ steps.package_version.outputs.VERSION }}
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
