--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Extract version from package.json
+      id: package_version
       run: |
         VERSION=$(cat package.json | grep version | awk -F: '{ print $2 }' | sed 's/[",]//g' | xargs)
         echo "Version: $VERSION"
