--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
     - name: Extract version from package.json
       id: package_version
       run: |
-        VERSION=$(cat package.json | grep version | awk -F: '{ print $2 }' | sed 's/[",]//g' | xargs)
+        VERSION=$(node -p "require('./package.json').version")
         echo "Version: $VERSION"
         echo "::set-output name=VERSION::$VERSION"
         
